<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dificultadActivity"
    android:background="@drawable/fondo_dificultad"

    >


    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/trivia_titulo"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="45dp"
        android:textStyle="bold" />

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_trivia_menu"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/btnFacil"
        android:textColor="@color/Blanco"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="20dp"
        android:onClick="btnFacil"
        >
    </Button>

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_trivia_menu"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/btnDificil"
        android:textColor="@color/Blanco"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="20dp"
        android:onClick="btnDificil"
        >

    </Button>


</LinearLayout>