<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_trivia2"
    tools:context=".TriviaActivity">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="720dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="322dp"
            android:layout_height="137dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/logo_trivia" />

        <Button
            android:id="@+id/btn_empezar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnEmpezar"
            android:layout_marginBottom="16dp"
            android:textColor="@drawable/btn_txt_menu1"
            android:background="@drawable/btn_trivia_menu"
            android:onClick="btnEmpezar"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPuntaje"
            android:layout_marginBottom="16dp"
            android:textColor="@drawable/btn_txt_menu1"
            android:background="@drawable/btn_menu1"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegresar"
            android:layout_marginBottom="16dp"
            android:textColor="@drawable/btn_txt_menu1"
            android:background="@drawable/btn_menu1"
            android:onClick="btnRegresar"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>